--- a/suds.html
+++ b/suds.html
@@ -50,9 +50,9 @@
       @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
     </style>
   </head>
-  <body class="px-24">
+  <body class="px-24 py-12">
     <img src="https://img.icons8.com/material/50/000000/r.png"/ class="hidden">
-    <nav class="b bg-none flex justify-center md:justify-between py-10">
+    <nav class="b bg-none flex justify-center md:justify-between">
       <div class="">
       <div class="b box text-center font-bold block">
         S   U   D   S
